apps/octra/src/app/core/component/transcr-overview/transcr-overview.component.css
.red {
  background-color: #fac6d0;
}

.segment-number {
  padding: 3px;
  width: 50px;
  vertical-align: middle;
}

.segment-warning {
  color: red;
}

.segment-transcript {
  vertical-align: middle;
  cursor: pointer;
}

.segment-transcript {
}

.found-errors {
  padding: 5px;
  display: block;
  text-align: center;
}

#statistics td {
  text-align: center;
}

.table thead th {
  text-align: center;
  vertical-align: middle;
}

.table .last-column {
  text-align: center;
  vertical-align: middle;
  width: 100px;
}

.table fa-icon {
  cursor: pointer;
}

#skip-silence-checkbox {
  margin-left: 5px;
  display: inline-flex;
  margin-right: 3px;
}

.ripple-container {
  display: none;
}

.bg-danger {
  background-color: #ffe5eb !important;
  border: 1px solid #fbb8c3 !important;
  color: black !important;
}

.bg-info {
  background-color: lightblue !important;
  border: 1px solid #64aabd !important;
  color: black !important;
}

.bg-success {
  background-color: #d3f3d3 !important;
  border: 1px solid #a1d5a1 !important;
  color: black !important;
}

.bg-highlight {
  background-color: yellow !important;
  border: 1px solid #ffdd00 !important;
  color: black;
}

